--- a/styles/modal.module.scss
+++ b/styles/modal.module.scss
@@ -17,10 +17,14 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 40px;
+  padding: 30px;
   border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   background-color: white;
+
+  @media screen and (min-width: 1200px) {
+    padding: 30px 40px;
+  }
 
   &__title {
     font-weight: bold;
@@ -28,16 +32,15 @@
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
-    margin-bottom: 20px;
+    margin: 10px 0;
     text-align: center;
   }
 }
 
 @media screen and (min-width: 700px) {
   .modal {
-    max-width: 750px;
-    height: 85vh;
-    max-height: 607px;
+    width: 35vw;
+    max-height: 95vh;
 
   }
 }
