--- a/styles/work.module.scss
+++ b/styles/work.module.scss
@@ -1,6 +1,6 @@
 .work {
-    display: block;
-    padding-bottom: 94px;
+  display: block;
+  padding-bottom: 94px;
 
   &__title {
     color: black;
@@ -22,13 +22,19 @@
   &__item {
     position: relative;
     margin: 10px;
+
     @media screen and (min-width: 768px) {
       margin: 5px;
-      width: calc((100% - 4 * 5px) / 2);
     }
+
     @media screen and (min-width: 1200px) {
       margin: 5px;
       width: calc((100% - 6 * 5px) / 3);
+    }
+
+    &:hover,
+    &:focus {
+      transform: scale(1.1);
     }
   }
 
