--- a/styles/form-order.module.scss
+++ b/styles/form-order.module.scss
@@ -19,6 +19,7 @@
     box-sizing: border-box;
     width: 100%;
     height: 35px;
+    font-size: 12px;
     padding-left: 42px;
     border: 2px solid #757575;
     border-radius: 4px;
@@ -48,17 +49,13 @@
     box-sizing: border-box;
     width: 100%;
     height: 35px;
+    font-size: 12px;
     padding-left: 42px;
     border: 2px solid red;
     border-radius: 4px;
     outline: none;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-
-  /* &__input:hover+&__icon_name,
-  &__input:focus+&__icon_name {
-    fill: #2196f3;
-  } */
 }
 
 .comments_field {
@@ -70,6 +67,7 @@
   display: block;
   width: 100%;
   height: 110px;
+  font-size: 12px;
   padding: 12px 16px;
   border: 2px solid #757575;
   border-radius: 4px;
@@ -90,6 +88,7 @@
   display: block;
   width: 100%;
   height: 110px;
+  font-size: 12px;
   padding: 12px 16px;
   border: 2px solid red;
   border-radius: 4px;
