--- a/styles/modal.module.scss
+++ b/styles/modal.module.scss
@@ -32,7 +32,7 @@
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
-    margin: 10px 0;
+   /*  margin: 10px 0; */
     text-align: center;
   }
 }
