--- a/styles/button-circle.module.scss
+++ b/styles/button-circle.module.scss
@@ -19,6 +19,7 @@
   top: 12px;
   background-image:
     url("../public/close.svg");
+  transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
@@ -33,6 +34,7 @@
   border: none;
   background-image:
     url("../public/menu.svg");
+  transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
