--- a/styles/clients.module.scss
+++ b/styles/clients.module.scss
@@ -30,6 +30,7 @@
     @extend %clients__link;
     background-image:
       url("../public/client1.svg");
+    transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
@@ -42,6 +43,7 @@
     @extend %clients__link;
     background-image:
       url("../public/client2.svg");
+    transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
@@ -54,6 +56,7 @@
     @extend %clients__link;
     background-image:
       url("../public/client3.svg");
+    transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
@@ -66,6 +69,7 @@
     @extend %clients__link;
     background-image:
       url("../public/client4.svg");
+    transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
@@ -78,6 +82,7 @@
     @extend %clients__link;
     background-image:
       url("../public/client5.svg");
+    transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
@@ -90,6 +95,7 @@
     @extend %clients__link;
     background-image:
       url("../public/client6.svg");
+    transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
