--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -65,6 +65,7 @@
     background-position: center;
     background-image:
       url("../public/envelope.svg");
+    transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
 
@@ -96,6 +97,7 @@
     background-position: center;
     background-image:
       url("../public/smartphone.svg");
+    transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   &__link_mail:hover>&__icon_mail,
@@ -188,25 +190,7 @@
   width: 100%;
 }
 
-.menu_toggle {
-  min-height: 40px;
-  min-width: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 
-  margin-left: auto;
-  background-color: transparent;
-  cursor: pointer;
-  border: none;
-  outline: none;
-  fill: #212121;
-}
-
-.menu_toggle:hover,
-.menu_toggle:focus {
-  fill: #2196f3;
-}
 
 .menu_container {
   position: fixed;
